@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 
 import os
+import re
 import hashlib
 
 #import pydevd
@@ -177,6 +178,24 @@ def _listResult(jsonData, nextPageParams={}, pageIndex=1, mine=False):
             kind = item.get('kind', '')
             snippet = item.get('snippet', None)
             
+            uploadInfo = ''
+            if __plugin__.getSettingAsBool('showUploadInfo', False):
+                channelTitle = snippet.get('channelTitle', None)
+                publishedAt = snippet.get('publishedAt', '')
+                match = re.compile('(\d+)-(\d+)-(\d+)T(\d+)\:(\d+)\:(\d+)\.(.+)').findall(publishedAt)
+                if match and len(match)>0 and len(match[0])>=7:
+                    uploadInfo = __plugin__.localize(30008)+': '
+                    uploadInfo = uploadInfo+bromixbmc.getFormatDateShort(match[0][0], match[0][1], match[0][2])
+                    uploadInfo = uploadInfo+' '+bromixbmc.getFormatTime(match[0][3], match[0][4], match[0][5])
+                    if channelTitle!=None:
+                        uploadInfo = uploadInfo+"[CR]"+__plugin__.localize(30009)+": "
+                        uploadInfo = uploadInfo+channelTitle
+                        pass
+                    
+                    uploadInfo = '[B]'+uploadInfo+"[/B][CR][CR]"
+                    pass
+                pass
+                
             # a special kind of youtube category
             if kind=='youtube#guideCategory' and snippet!=None:
                 _id = item.get('id', None)
@@ -198,7 +217,7 @@ def _listResult(jsonData, nextPageParams={}, pageIndex=1, mine=False):
                 videoId = upload.get('videoId', None)
                 if videoId!=None and title!=None:
                     videoInfo = videoInfos.get(videoId, {})
-                    infoLabels = {'plot': description,
+                    infoLabels = {'plot': uploadInfo+description,
                                   'duration': videoInfo.get('duration', '1')}
                     params = {'action': __ACTION_PLAY__,
                               'id': videoId}
@@ -244,7 +263,7 @@ def _listResult(jsonData, nextPageParams={}, pageIndex=1, mine=False):
                                   'id': videoId}
                         
                         videoInfo = videoInfos.get(videoId, {})
-                        infoLabels = {'plot': description,
+                        infoLabels = {'plot': uploadInfo+description,
                                       'duration': videoInfo.get('duration', '1')}
                         __plugin__.addVideoLink(name=title, params=params, thumbnailImage=thumbnailImage, fanart=__FANART__, infoLabels=infoLabels)
                     pass
@@ -283,7 +302,7 @@ def _listResult(jsonData, nextPageParams={}, pageIndex=1, mine=False):
                               'id': videoId}
                     
                     videoInfo = videoInfos.get(videoId, {})
-                    infoLabels = {'plot': description,
+                    infoLabels = {'plot': uploadInfo+description,
                                   'duration': videoInfo.get('duration', '1')}
                     __plugin__.addVideoLink(name=title, params=params, thumbnailImage=thumbnailImage, fanart=__FANART__, infoLabels=infoLabels)
                     pass
